--- a/views/about/about.templ
+++ b/views/about/about.templ
@@ -1,36 +1,41 @@
 package about
 
-templ AboutWithoutLayoutComponent() {
-	<div class="h-full flex-grow px-4 flex flex-col justify-center mx-auto">
- 	 <div class="group flex w-full h-8 items-center justify-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-			<span class="text-3xl font bold pb-8">Readme</span>
-		</div>
-		<ul id="list" class="text-gray-500 flex flex-col gap-4 py-2 w-3/4 mx-auto" role="listbox" aria-activedescendant="item1">
-			<li tabindex="0" id="item1" number="1" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 1. hi my name harish gokul. i am a junior software engineer with 1-2 years of experience and an upcoming master's student at UC Davis</span>
-			</li>
-			<li tabindex="0" id="item2" number="2" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 2. i love building CLI applications, reading up on database internals, building minimalistic LSP's and exploring cool data structures.</span>
-			</li>
-			<li tabindex="0" id="item3" number="3" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 3. i just build stuff i like, this portfolio website was such a cool thing to build for me, from using Next JS to actually building a clone/spinoff of it in Go and HTMX. i jusy really like exploring stuff and try to be decent at it.</span>
-			</li>			
+import (
+	"github.com/harish876/portfolio/components/pagelabel"
+	"github.com/harish876/portfolio/components/syntax"
+)
 
-      <li tabindex="0" id="item4" number="4" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 4. currently i am building a distributed key value store, exploring language parsers/lexers and learning a bit of functional programming in Ocaml .</span>
-			</li>
-			<li tabindex="0" id="item5" number="5" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4">
-					# 5. at my work, i started off as a JS/TS dev developing frontend features and backend REST API's to a wider tech stack where i develop full stack apps, write ETL pipelines,perform data migration
-					and use golang to do build out my side projects.
-				</span>
-			</li>
-			<li tabindex="0" id="item6" number="6" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 6. outside of nerding out on tech stuff, i love basketball and american football and started watching tennis a lot.</span>
-			</li>
-		</ul>
+templ AboutWithoutLayoutComponent() {
+	<div class="h-full w-screen flex-grow px-4 flex flex-col justify-center mt-8 mx-auto">
+		<div class="group flex w-full h-8 items-center justify-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
+			@syntax.Title("Readme")
+		</div>
+		@syntax.Function("AboutComponent") {
+			<ul id="list" class="text-gray-500 flex flex-col ml-8 gap-4 py-2 mx-auto" role="listbox" aria-activedescendant="item1">
+				@syntax.EnclosingTag("ul") {
+					@syntax.ComposableList("0", "item1", "1", "option") {
+						@syntax.List("# 1. hi my name harish gokul. i am a junior software engineer with 1-2 years of experience and an upcoming master's student at UC Davis")
+					}
+					@syntax.ComposableList("0", "item2", "2", "option") {
+						@syntax.List("2. i love building CLI applications, reading up on database internals, building minimalistic LSP's and exploring cool data structures")
+					}
+					@syntax.ComposableList("0", "item3", "3", "option") {
+						@syntax.List("3. i just build stuff i like, this portfolio website was such a cool thing to build for me, from using Next JS to actually building a clone/spinoff of it in Go and HTMX. i jusy really like exploring stuff and try to be decent at it.")
+					}
+					@syntax.ComposableList("0", "item4", "4", "option") {
+						@syntax.List("4. currently i am building a distributed key value store, exploring language parsers/lexers and learning a bit of functional programming in Ocaml")
+					}
+					@syntax.ComposableList("0", "item5", "5", "option") {
+						@syntax.List("5. at my work, i started off as a JS/TS dev developing frontend features and backend REST API's to a wider tech stack where i develop full stack apps, write ETL pipelines,perform data migration and use golang to do build out my side projects.")
+					}
+					@syntax.ComposableList("0", "item6", "6", "option") {
+						@syntax.List("6. outside of nerding out on tech stuff, i love basketball and american football and started watching tennis a lot")
+					}
+				}
+			</ul>
+		}
 	</div>
-	<span id="currentText" hx-swap-oob="true" class="bg-secondary-500 text-white px-2 text-md rounded-r-md">readme.txt</span>
+	@pagelabel.PageLabelWithSwap("readme.txt")
 }
 
 templ About() {
