--- a/views/layout/index.templ
+++ b/views/layout/index.templ
@@ -1,5 +1,8 @@
 package layout
 
+import "github.com/harish876/portfolio/components/pagelabel"
+import "github.com/harish876/portfolio/components/svg"
+
 templ Base(title string) {
 	<!DOCTYPE html>
 	<html lang="en" data-theme="" class="dark">
@@ -23,20 +26,81 @@ templ Base(title string) {
 			<script type="module" src="/js/launch.js"></script>
 		</head>
 		<body hx-boost="true" class="dark:bg-terminal-base font-nvim text-white leading-normal tracking-tighter">
-			<div id="layout" class="w-full min-h-screen bg-terminal-base flex flex-col">
-				<header class="flex flex-row justify-between items-center p-4">
-					<div class="flex space-x-4">
-						<button hx-get="/" hx-target="body" hx-swap="innerHTML transition:true" class="text-white font-bold tracking-tight btn btn-ghost hover:bg-primary-400">home</button>
-						<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary-400">readme</button>
-						<button hx-get="/project" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary-400">projects</button>
-						<button hx-get="/blog" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white disabled">blog <span class="text-xs">(coming soon)</span></button>
+			<div id="layout" class="w-full min-h-screen min-w-screen bg-terminal-base flex flex-col">
+				<header class="flex flex-row justify-between items-center px-4 bg-primary-accent">
+
+         <input id="my-drawer" type="checkbox" class="drawer-toggle" />
+        <div class="drawer-content flex-none lg:hidden">
+        <label for="my-drawer" aria-label="open sidebar" class="btn btn-square btn-ghost drawer-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            class="inline-block h-6 w-6 stroke-current">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </label>
+        </div>
+        
+        <div class="drawer-side">
+        <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+          <ul class="menu bg-primary-dark text-base-content min-h-full w-80 p-4">
+						<button hx-get="/" hx-target="body" hx-swap="innerHTML transition:true" class="text-white font-bold tracking-tight btn btn-ghost hover:bg-primary">
+              @svg.Gopher()
+              home
+            </button>
+						<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary">
+             @svg.Vim()
+            readme
+            </button>
+						<button hx-get="/project" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary">
+            @svg.Apache()
+            projects
+            </button>
+						<button hx-get="/blog" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary disabled">
+            @svg.Emacs()
+            blog 
+            <span class="text-xs">(coming soon)</span></button>          </ul>
+        </div>
+
+					<div class="hidden lg:flex lg:space-x-4">
+						<button hx-get="/" hx-target="body" hx-swap="innerHTML transition:true" class="text-white font-bold tracking-tight btn btn-ghost hover:bg-primary">
+              @svg.Gopher()
+              home
+            </button>
+						<button hx-get="/about" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary">
+             @svg.Vim()
+            readme
+            </button>
+						<button hx-get="/project" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary">
+            @svg.Apache()
+            projects
+            </button>
+						<button hx-get="/blog" hx-indicator="#spinner" hx-target="#commandDisplay" hx-swap="transition:true" class="text-white btn btn-ghost hover:bg-primary disabled">
+            @svg.Emacs()
+            blog 
+            <span class="text-xs">(coming soon)</span></button>
 					</div>
-					<div class="flex items-center space-x-2">
-						<a href="https://www.linkedin.com/in/harish-gokul-39432718b/" class="text-white btn btn-ghost">LinkedIn</a>
-						<a href="https://github.com/harish876" class="text-white btn btn-ghost">Github</a>
-				   <a href=" https://app.codecrafters.io/users/harish876
-" class="text-white btn btn-ghost">Codecrafters</a>
-            </div>
+				<span id="spinner" class="loading loading-infinity loading-sm htmx-indicator"></span> 
+          <div class="flex items-center space-x-2">
+						<a href="https://www.linkedin.com/in/harish-gokul-39432718b/" class="text-white btn btn-ghost hover:bg-primary">
+           @svg.LinkedIn() 
+            LinkedIn
+            </a>
+						<a href="https://github.com/harish876" class="text-white btn btn-ghost hover:bg-primary">
+            @svg.GithubWhite()
+            Github
+            </a>
+						<a href="https://app.codecrafters.io/users/harish876" class="text-white btn btn-ghost hover:bg-primary"
+						>
+            @svg.Codecrafters()
+            Codecrafters
+            </a>
+					</div>
 				</header>
 				<main id="commandDisplay" class="flex flex-col flex-grow mt-8 md:mt-4 px-4 py-8 text-lg bg-terminal-base">
 					{ children... }
@@ -47,17 +111,19 @@ templ Base(title string) {
 						<input name="command" id="commandBox" type="text" autocomplete="off" placeholder="$ enter command here" class="w-full px-4 border-none focus:ring-transparent text-white leading-tight bg-transparent"/>
 					</form>
 				</div>
-				<footer class="flex md:flex-row justify-between items-center p-4 rounded-lg">
+				<footer class="flex md:flex-row justify-between items-center mb-4 rounded-lg bg-primary-accent">
 					<div class="flex md:flex-row sm:space-y-0 md:space-x-4">
-						<span id="currentText" class="bg-secondary-500 text-white px-2 text-md rounded-r-md">home.txt</span>
+						<span id="currentMode" class="bg-secondary-normal text-primary uppercase font-bold px-2 text-md" data-mode="1">NORMAL</span>
+						@pagelabel.PageLabel("home.txt")
+						<span hidden id="currentModeEnum" value="1"></span>
 						<span id="spinner" class="loading loading-infinity loading-sm htmx-indicator"></span>
 					</div>
-					<div class="flex md:flex-row sm:space-y-0 md:space-x-4">
+					<div class="flex md:flex-row sm:space-y-0 md:space-x-4 bg-primary-accent">
 						<span id="tabSize" class="text-white px-2 text-md hover:bg-primary cursor-pointer">Ln 81, Col 122</span>
 						<span class="hidden md:block text-white px-2 text-md hover:bg-primary cursor-pointer tooltip" data-tip="htmx">htmx</span>
 						<span class="hidden md:block text-white px-2 text-md hover:bg-primary cursor-pointer tooltip">templ</span>
 						<span id="tabSize" class="hidden md:block text-white px-2 text-md hover:bg-primary-400 cursor-pointer">Tab Size: 4</span>
-						<span id="errorText" class="bg-error-base text-white px-2 text-md rounded-l-md">nvim</span>
+						<span id="errorText" class="text-primary font-bold bg-error-base px-2 text-md rounded-l-md">nvim</span>
 					</div>
 				</footer>
 			</div>
