--- a/views/home/home.templ
+++ b/views/home/home.templ
@@ -1,31 +1,37 @@
 package home
 
-import "github.com/harish876/portfolio/views/layout"
+import (
+	"github.com/harish876/portfolio/components/syntax"
+	"github.com/harish876/portfolio/views/layout"
+)
 
 //TODO: use arrow keys to navigate up and down these options. Add ASCII art
 templ HomeComponent() {
-	<div class="h-full flex-grow px-4 flex flex-col justify-center mx-auto">
+<div class="h-full w-screen flex-grow px-4 flex flex-col justify-center mt-8 mx-auto my-auto lg:pt-0">
 		<div class="group flex w-full h-8 items-center justify-center active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-			<span class="text-3xl font bold pb-16">Introduction</span>
+			@syntax.Title("Introduction")
 		</div>
-		<ul id="list" class="text-gray-500 flex flex-col gap-4 py-2" role="listbox" aria-activedescendant="item1">
-			<li tabindex="0" id="item1" number="1" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:bor er-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 1. hi my name harish. I use neovim btw. this is going to be my personality for a while. Please visit my readme to akshually know about me. </span>
-			</li>
-			<li tabindex="0" id="item2" number="2" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 2. hit "i" to get into insert mode.</span>
-			</li>
-			<li tabindex="0" id="item3" number="3" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 3. type "man" to open the friendly manual for navigation options without a mouse. (coming soon)</span>
-			</li>
-			<li tabindex="0" id="item4" number="4" role="option" class="group flex p-6 h-auto items-center hover:bg-terminal-hover hover:border-primary-400 hover:border-l-2 active:border-primary-400 hover:text-white focus:text-white  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none">
-				<span class="px-4"># 4. use "help" to list out all options</span>
-			</li>
-			<a href="https://github.com/harish876/hypefx" target="_blank" id="item1" tabindex="0" number="5" role="option" class="group flex h-auto p-6 items-center hover:bg-terminal-hover hover:text-white focus:text-white hover:border-primary-400 hover:border-l-2 active:border-primary-400  active:border-l-2 active:pl-[22px] active:text-gray-11 active:bg-gray-6 focus:border-primary-400 focus:border-l-2 focus:pl-[22px] focus:text-gray-11 focus:bg-gray-6 focus:outline-none has-[:focus]:border-orange has-[:focus]:border-l-2 has-[:focus]:pl-[22px] has-[:focus]:text-gray-11 has-[:focus]:bg-gray-6 has-[:focus]:outline-none [&>svg]:hover:block [&>svg]:active:text-gray-11">
-				<span class="px-4"># 5. this was project was built using my custom framework for building web apps in go and htmx. (Click to go to the repo)</span>
-				<svg class="hidden w-5 h-5 ml-6 text-gray-10 shrink-0" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="square-arrow-top-right, open, new, link, open link, box, arrow"><path class="stroke-current" d="M15.2083 11.6667V16.875H3.125V4.79167H7.70833M11.4583 3.125H16.875V8.54167M9.16667 10.8333L16.25 3.75" stroke-width="1.5" stroke-linecap="square"></path></g></svg>
-			</a>
-		</ul>
+		@syntax.Function("IntroComponent") {
+			<ul id="list" class="text-gray-500 flex flex-col gap-3 ml-8 pt-4" role="listbox" aria-activedescendant="item1">
+				@syntax.EnclosingTag("ul") {
+					@syntax.ComposableList("0","item1", "1", "option") {
+						@syntax.List(`1. hi my name harish. I use neovim btw. this is going to be my personality for a while. Please visit my readme to akshually know me.`)
+					}
+					@syntax.ComposableList("0", "item2", "2", "option") {
+						@syntax.List(`2. hit "i" to get into insert mode.`)
+					}
+					@syntax.ComposableList("0", "item3", "3", "option") {
+						@syntax.List(`3. type "man" to open the friendly manual for navigation options without a mouse. (coming soon)`)
+					}
+					@syntax.ComposableList("0", "item4", "4", "option") {
+						@syntax.List(`4. use "help" to list out all options`)
+					}
+					@syntax.ComposableHyperlink("0", "item5", "5", "option") {
+						@syntax.List(`5.this was project was built using my custom framework for building web apps in go and htmx. (Click to go to the repo)`, "a")
+					}
+				}
+			</ul>
+		}
 	</div>
 }
 
